grammars/tree-sitter-noted/test/corpus/headings.txt
==================
H1 heading
==================

# Hello World

---

(document
  (heading
    marker: _
    (text)))

==================
H2 heading
==================

## Section Title

---

(document
  (heading
    marker: _
    (text)))

==================
H3 heading
==================

### Subsection

---

(document
  (heading
    marker: _
    (text)))

==================
Heading levels H1 through H6
==================

# One
## Two
### Three
#### Four
##### Five
###### Six

---

(document
  (heading marker: _ (text))
  (heading marker: _ (text))
  (heading marker: _ (text))
  (heading marker: _ (text))
  (heading marker: _ (text))
  (heading marker: _ (text)))
